--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
+    "hmr": "ng serve --configuration=hmr",
     "build": "ng build",
     "test": "ng test",
     "e2e": "ng e2e",
@@ -56,9 +57,10 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^10.12.18",
     "codelyzer": "~4.5.0",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
