--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve --open",
     "hmr": "ng serve --configuration=hmr",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer",
     "test": "ng test",
     "e2e": "ng e2e",
     "lint-staged": "lint-staged",
@@ -42,12 +42,16 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngx-progressbar/core": "^5.3.1",
+    "@ngx-progressbar/router": "^5.3.1",
     "bootstrap-css-only": "^4.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "rxjs": "~6.3.3",
