--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ngx-progressbar/core": "^5.3.1",
+    "@ngx-progressbar/http": "^5.3.1",
     "@ngx-progressbar/router": "^5.3.1",
     "bootstrap-css-only": "^4.2.1",
     "core-js": "^2.5.4",
