--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,7 @@
     "selector-pseudo-class-no-unknown": null,
     "selector-pseudo-element-colon-notation": null,
     "at-rule-no-unknown": null,
-    "comment-empty-line-before": null
+    "comment-empty-line-before": null,
+    "selector-pseudo-element-no-unknown": null
   }
 }
