--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "hmr": "ng serve --configuration=hmr",
+    "hmr": "ng serve --configuration=hmr --open",
     "build": "ng build --prod --build-optimizer",
     "test": "ng test",
     "e2e": "ng e2e",
@@ -47,6 +47,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/effects": "^7.1.0",
+    "@ngrx/router-store": "^7.1.0",
+    "@ngrx/store": "^7.1.0",
     "@ngx-progressbar/core": "^5.3.1",
     "@ngx-progressbar/http": "^5.3.1",
     "@ngx-progressbar/router": "^5.3.1",
