--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "node_modules/chartist/dist/chartist.css",
               "src/theme.less",
               "src/global.scss"
             ],
