--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "@ngx-progressbar/http": "^5.3.1",
     "@ngx-progressbar/router": "^5.3.1",
     "bootstrap-css-only": "^4.2.1",
+    "chartist": "^0.11.0",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
+    "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
