--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "@ngx-progressbar/router": "^5.3.1",
     "bootstrap-css-only": "^4.2.1",
     "chartist": "^0.11.0",
+    "chartist-plugin-tooltip": "^0.0.11",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "rxjs": "~6.3.3",
