--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,7 @@
     "selector-pseudo-element-colon-notation": null,
     "at-rule-no-unknown": null,
     "comment-empty-line-before": null,
-    "selector-pseudo-element-no-unknown": null
+    "selector-pseudo-element-no-unknown": null,
+    "selector-type-no-unknown": null
   }
 }
