--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "hammerjs": "^2.0.8",
     "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
+    "ngx-perfect-scrollbar": "^7.2.0",
+    "ngx-scrollbar": "^4.1.1",
+    "qs": "^6.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
