--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.11",
     "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "ngx-perfect-scrollbar": "^7.2.0",
