--- a/package.json
+++ b/package.json
@@ -53,20 +53,20 @@
     "@ngx-progressbar/core": "^5.3.1",
     "@ngx-progressbar/http": "^5.3.1",
     "@ngx-progressbar/router": "^5.3.1",
-    "angular-froala-wysiwyg": "^2.9.2",
     "bootstrap-css-only": "^4.2.1",
     "chartist": "^0.11.0",
     "chartist-plugin-tooltips-updated": "^0.0.20",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
     "ngx-perfect-scrollbar": "^7.2.0",
+    "ngx-quill": "^4.6.3",
     "ngx-scrollbar": "^4.1.1",
     "qs": "^6.6.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
