--- a/package.json
+++ b/package.json
@@ -57,14 +57,17 @@
     "chartist": "^0.11.0",
     "chartist-plugin-tooltips-updated": "^0.0.20",
     "core-js": "^2.5.4",
+    "d3": "3.5.17",
     "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "ng-chartist": "^4.1.0",
     "ng-zorro-antd": "^7.0.0-rc.3",
+    "ng2-nvd3": "^2.0.0",
     "ngx-perfect-scrollbar": "^7.2.0",
     "ngx-quill": "^4.6.3",
     "ngx-scrollbar": "^4.1.1",
+    "nvd3": "^1.8.6",
     "qs": "^6.6.0",
     "quill": "^1.3.6",
     "rxjs": "~6.3.3",
