--- a/angular.json
+++ b/angular.json
@@ -32,14 +32,18 @@
               }
             ],
             "styles": [
-              "node_modules/chartist/dist/chartist.css",
+              "./node_modules/chartist/dist/chartist.css",
+              "./node_modules/nvd3/build/nv.d3.css",
               "src/theme.less",
               "src/global.scss",
               "./node_modules/quill/dist/quill.core.css",
               "./node_modules/quill/dist/quill.bubble.css",
-              "./node_modules/quill/dist/quill.snow.css"
+              "./node_modules/quill/dist/quill.snow.css",
+              "./node_modules/c3/c3.min.css"
             ],
             "scripts": [
+              "./node_modules/c3/c3.min.js",
+              "./node_modules/d3/d3.min.js"
             ]
           },
           "configurations": {
