--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "@ngx-progressbar/core": "^5.3.1",
     "@ngx-progressbar/http": "^5.3.1",
     "@ngx-progressbar/router": "^5.3.1",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap-css-only": "^4.2.1",
+    "c3": "0.4.22",
     "chartist": "^0.11.0",
     "chartist-plugin-tooltips-updated": "^0.0.20",
     "core-js": "^2.5.4",
