--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clean-ui-admin-template-angular",
-  "version": "1.0.0",
+  "version": "2.1.2",
   "private": true,
   "scripts": {
     "ng": "ng",
@@ -20,89 +20,83 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "src/**/*.{ts,scss,less}": [
-        "prettier --write",
-        "git add"
-      ],
-      "src/**/*.{ts}": [
-        "tslint"
-      ],
-      "src/**/*.{scss,less}": [
-        "stylelint"
-      ]
-    },
-    "ignore": [
-      "src/assets/fonts/*",
-      "src/assets/images/*"
+    "src/**/*.{ts,scss,less}": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.{ts}": [
+      "tslint"
+    ],
+    "src/**/*.{scss,less}": [
+      "stylelint"
     ]
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/fire": "^5.1.1",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ngrx/effects": "^7.1.0",
-    "@ngrx/router-store": "^7.1.0",
-    "@ngrx/store": "^7.1.0",
-    "@ngx-progressbar/core": "^5.3.1",
-    "@ngx-progressbar/http": "^5.3.1",
-    "@ngx-progressbar/router": "^5.3.1",
+    "@angular/animations": "~8.1.1",
+    "@angular/common": "~8.1.1",
+    "@angular/compiler": "~8.1.1",
+    "@angular/core": "~8.1.1",
+    "@angular/fire": "^5.2.1",
+    "@angular/forms": "~8.1.1",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/router": "~8.1.1",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/router-store": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
+    "@ngx-progressbar/core": "^5.3.2",
+    "@ngx-progressbar/http": "^5.3.2",
+    "@ngx-progressbar/router": "^5.3.2",
     "angular2-chartjs": "^0.5.1",
-    "bootstrap-css-only": "^4.2.1",
-    "c3": "0.4.22",
-    "chartist": "^0.11.0",
-    "chartist-plugin-tooltips-updated": "^0.0.20",
-    "core-js": "^2.5.4",
-    "d3": "3.5.17",
-    "firebase": "^5.8.0",
+    "bootstrap-css-only": "^4.3.1",
+    "c3": "0.7.2",
+    "chartist": "^0.11.3",
+    "chartist-plugin-tooltips-updated": "^0.0.21",
+    "core-js": "^3.1.4",
+    "d3": "5.9.7",
+    "firebase": "^6.3.0",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "ng-chartist": "^4.1.0",
-    "ng-zorro-antd": "^7.0.0-rc.3",
+    "ng-zorro-antd": "^8.0.2",
     "ng2-nvd3": "^2.0.0",
-    "ngx-perfect-scrollbar": "^7.2.0",
-    "ngx-quill": "^4.6.3",
-    "ngx-scrollbar": "^4.1.1",
+    "ngx-perfect-scrollbar": "^8.0.0",
+    "ngx-quill": "^7.0.2",
+    "ngx-scrollbar": "^4.2.0",
     "nvd3": "^1.8.6",
-    "qs": "^6.6.0",
+    "qs": "^6.7.0",
     "quill": "^1.3.6",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.801.1",
+    "@angular/cli": "~8.1.1",
+    "@angular/compiler-cli": "~8.1.1",
+    "@angular/language-service": "~8.1.1",
     "@angularclass/hmr": "^2.1.3",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.12.18",
-    "codelyzer": "~4.5.0",
-    "husky": "^1.3.1",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.13",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^12.6.2",
+    "codelyzer": "~5.1.0",
+    "husky": "^3.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.16.0",
-    "protractor": "~5.4.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-prettier": "^4.0.0",
-    "stylelint-config-standard": "^18.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": "~3.2.2"
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.0.0",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.18.2",
+    "protractor": "~5.4.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-standard": "^18.3.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "~3.4.5"
   }
 }
