--- a/package.json
+++ b/package.json
@@ -33,15 +33,15 @@
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^8.4.1",
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
+    "@angular/animations": "^9.1.3",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/core": "^9.1.3",
     "@angular/fire": "^5.3.0",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/forms": "^9.1.3",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/router": "^9.1.3",
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/router-store": "^8.6.0",
@@ -52,6 +52,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@w11k/angular-sticky-things": "^1.2.4",
     "angular2-chartjs": "^0.5.1",
+    "angular-us-map": "^1.2.0",
     "antd-theme-webpack-plugin": "^1.3.1",
     "apexcharts": "^3.17.1",
     "bootstrap": "^4.4.1",
@@ -77,15 +78,15 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "^9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
     "@angularclass/hmr": "^2.1.3",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.6.2",
-    "codelyzer": "~5.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -97,13 +98,13 @@
     "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
     "protractor": "~5.4.2",
-    "rxjs": "^6.5.3",
+    "rxjs": "^6.5.5",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-standard": "^18.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.8.3"
   }
 }
