--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint-staged": "lint-staged",
     "prettier": "prettier --write \"src/**/*.{ts,scss,less}\"",
     "tslint": "tslint \"src/**/*.{ts}\"",
-    "stylelint": "stylelint \"src/**/*.{scss,less}\""
+    "stylelint": "stylelint \"src/**/*.{scss,less}\"",
+    "postinstall": "ngcc"
   },
   "husky": {
     "hooks": {
@@ -32,49 +33,50 @@
     ]
   },
   "dependencies": {
-    "@angular-builders/custom-webpack": "^8.4.1",
+    "@angular-builders/custom-webpack": "^9.1.0",
     "@angular/animations": "^9.1.3",
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
     "@angular/core": "^9.1.3",
     "@angular/fire": "^5.3.0",
     "@angular/forms": "^9.1.3",
+    "@angular/localize": "^9.1.3",
     "@angular/platform-browser": "^9.1.3",
     "@angular/platform-browser-dynamic": "^9.1.3",
     "@angular/router": "^9.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.1",
-    "@ngrx/effects": "^8.6.0",
-    "@ngrx/router-store": "^8.6.0",
-    "@ngrx/store": "^8.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngrx/effects": "^9.1.0",
+    "@ngrx/router-store": "^9.1.0",
+    "@ngrx/store": "^9.1.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@ngx-progressbar/http": "^5.3.2",
     "@ngx-progressbar/router": "^5.3.2",
-    "@ngx-translate/core": "^11.0.1",
-    "@w11k/angular-sticky-things": "^1.2.4",
-    "angular2-chartjs": "^0.5.1",
+    "@ngx-translate/core": "^12.1.2",
     "angular-us-map": "^1.2.0",
+    "angular2-chartjs": "^0.5.1",
     "antd-theme-webpack-plugin": "^1.3.1",
-    "apexcharts": "^3.17.1",
+    "apexcharts": "^3.19.0",
     "bootstrap": "^4.4.1",
     "c3": "^0.7.12",
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.0.21",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "firebase": "^6.3.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
-    "ng-apexcharts": "^1.2.2",
+    "ng-apexcharts": "^1.2.3",
     "ng-chartist": "^4.1.0",
-    "ng-zorro-antd": "^8.5.2",
+    "ng-zorro-antd": "^9.0.2",
     "ngx-nestable": "^0.9.4",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "ngx-quill": "^7.3.12",
+    "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-quill": "^8.1.7",
     "ngx-sortablejs": "^3.1.4",
-    "qs": "^6.7.0",
+    "rxjs": "^6.5.5",
+    "qs": "^6.9.3",
     "quill": "^1.3.7",
     "sortablejs": "^1.10.2",
     "store": "^2.0.12",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -98,7 +100,6 @@
     "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
     "protractor": "~5.4.2",
-    "rxjs": "^6.5.5",
     "stylelint": "^10.1.0",
     "stylelint-config-prettier": "^5.2.0",
     "stylelint-config-standard": "^18.3.0",
