WIP: ng9 / antd theme loader less plugin

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,6 +6,10 @@
       "node"
     ]
   },
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
