--- a/angular.json
+++ b/angular.json
@@ -35,14 +35,15 @@
               }
             ],
             "styles": [
+              "./node_modules/ng-zorro-antd/style/entry.less",
+              "src/app/components/kit-vendors/antd/themes/default.less",
+              "src/app/components/kit-vendors/antd/themes/dark.less",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/chartist/dist/chartist.css",
               "./node_modules/quill/dist/quill.core.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/c3/c3.min.css",
-              "src/app/components/kit-vendors/antd/themes/light/index.less",
-              "src/app/components/kit-vendors/antd/themes/dark/index.less",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/global.scss"
             ],
             "scripts": [
