--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
     "@angular/core": "^9.1.3",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "^9.1.3",
     "@angular/localize": "^9.1.3",
     "@angular/platform-browser": "^9.1.3",
@@ -59,6 +60,7 @@
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.0.21",
     "core-js": "^3.6.5",
+    "firebase": "^7.14.4",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "ng-apexcharts": "^1.2.3",
@@ -68,9 +70,9 @@
     "ngx-perfect-scrollbar": "^9.0.0",
     "ngx-quill": "^8.1.7",
     "ngx-sortablejs": "^3.1.4",
-    "rxjs": "^6.5.5",
     "qs": "^6.9.3",
     "quill": "^1.3.7",
+    "rxjs": "^6.5.5",
     "sortablejs": "^1.10.2",
     "store": "^2.0.12",
     "tslib": "^1.11.1",
